--- a/html/workshop_setup/preregistration_info.html
+++ b/html/workshop_setup/preregistration_info.html
@@ -12,7 +12,7 @@
 <meta name="author" content />
 
 
-<title>UM Bioinformatics Core Summer Workshop Series</title>
+<title>UM Bioinformatics Core Fall Workshop Series</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -259,12 +259,12 @@ https://favicon.io/emoji-favicons/computer/
 -->
 <meta property="og:url" content="https://umich-brcf-bioinf.github.io/2023-07-31-umich-computational-foundations/html/workshop_setup/preregistration_info.html" />
 <meta property="og:site_name" content="University of Michigan Bioinformatics Core" />
-<meta property="og:title" content="UM BioinfCore Summer Workshop Series" />
-<meta property="og:description" content="Two companion workshops in July and August." />
+<meta property="og:title" content="UM BioinfCore Fall Workshop Series" />
+<meta property="og:description" content="Two companion workshops in November." />
 <meta name="twitter:label1" value="Computational Foundations (Intro to Bash/R)" />
-<meta name="twitter:data1" value="7/31-8/2 9-1 ET" />
+<meta name="twitter:data1" value="11/1-3 9-1 ET" />
 <meta name="twitter:label2" value="RNA-Seq Demystified" />
-<meta name="twitter:data2" value="8/14-8/16 9-1 ET" />
+<meta name="twitter:data2" value="11/15-17 9-1 ET" />
 
 <style type="text/css">
 code{white-space: pre-wrap;}
@@ -387,7 +387,7 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">UM Bioinformatics Core Summer Workshop
+<h1 class="title toc-ignore">UM Bioinformatics Core Fall Workshop
 Series</h1>
 <h4 class="author"></h4>
 
@@ -401,11 +401,11 @@ font-size: 14pt;
 </style>
 <p>The Bioinf Core Workshop Team is pleased to host two workshops:</p>
 <div id="am-1pm-et-computational-foundations" class="section level3">
-<h3><strong><a href="https://www.eventbrite.com/e/computational-foundations-a-virtual-3-day-workshop-tickets-628779013957" target="_blank">7/31-8/2,
+<h3><strong><a href="https://www.eventbrite.com/e/computational-foundations-a-3-day-virtual-workshop-tickets-714248324967" target="_blank">11/1-3,
 9am-1pm ET: Computational Foundations</a></strong></h3>
 </div>
 <div id="am-1pm-et-rna-seq-demystified" class="section level3">
-<h3><strong><a href="https://www.eventbrite.com/e/rna-seq-demystified-a-virtual-3-day-workshop-registration-628781371007" target="_blank">8/14-8/16,
+<h3><strong><a href="https://www.eventbrite.com/e/rna-seq-demystified-a-3-day-virtual-workshop-registration-714253069157" target="_blank">11/15-17,
 9am-1pm ET: RNA-Seq Demystified</a></strong></h3>
 <ul>
 <li>This two-workshop series is targeted toward researchers who would
@@ -429,7 +429,7 @@ workshop, or equivalent experience.</li>
 <table style="margin-left:auto; margin-right:auto;">
 <tr>
 <td>
-<a title="Learn More and Register" href="https://www.eventbrite.com/e/rna-seq-demystified-a-virtual-3-day-workshop-registration-628781371007" style="padding:18px; background-color:#00B2A9; font-weight:bold;letter-spacing:normal;line-height:100%;text-align:center;text-decoration:none;color:#ffffff;display:block" target="_blank">Learn
+<a title="Learn More and Register" href="https://www.eventbrite.com/e/rna-seq-demystified-a-3-day-virtual-workshop-registration-714253069157" style="padding:18px; background-color:#00B2A9; font-weight:bold;letter-spacing:normal;line-height:100%;text-align:center;text-decoration:none;color:#ffffff;display:block" target="_blank">Learn
 More and Register</a>
 </td>
 </tr>
@@ -449,7 +449,7 @@ live-coding and opportunities for questions throughout.</li>
 <li>The workshop will be recorded and the recordings will be made
 available to those who attend the workshop.</li>
 </ul></li>
-<li>The cost is $300/seat for the entire two-workshop series.
+<li>The cost is $390/seat for the entire two-workshop series.
 <ul>
 <li>While it is possible to register for a single workshop, we recommend
 that you attend both. When you enroll in the <strong>RNA-Seq
@@ -460,7 +460,7 @@ charge, however please note that: 1) registration precedence is given to
 RNA-Seq Demystified attendees and 2) general admission registration for
 Computational Foundations opens mid-July.</li>
 </ul></li>
-<li>Registration closes 7/24/2023.</li>
+<li>Registration closes 10/25/2023.</li>
 </ul>
 <p><br /></p>
 <p>For any questions, please email the Bioinformatics Core Workshop Team
