--- a/html/workshop_setup/preregistration_info_header.html
+++ b/html/workshop_setup/preregistration_info_header.html
@@ -6,9 +6,9 @@ https://favicon.io/emoji-favicons/computer/
 -->
 <meta property="og:url" content="https://umich-brcf-bioinf.github.io/2023-07-31-umich-computational-foundations/html/workshop_setup/preregistration_info.html"/>
 <meta property="og:site_name" content="University of Michigan Bioinformatics Core"/>
-<meta property="og:title" content="UM BioinfCore Summer Workshop Series"/>
-<meta property="og:description" content="Two companion workshops in July and August."/>
+<meta property="og:title" content="UM BioinfCore Fall Workshop Series"/>
+<meta property="og:description" content="Two companion workshops in November."/>
 <meta name="twitter:label1" value="Computational Foundations (Intro to Bash/R)" />
-<meta name="twitter:data1" value="7/31-8/2 9-1 ET" />
+<meta name="twitter:data1" value="11/1-3 9-1 ET" />
 <meta name="twitter:label2" value="RNA-Seq Demystified" />
-<meta name="twitter:data2" value="8/14-8/16 9-1 ET" />
+<meta name="twitter:data2" value="11/15-17 9-1 ET" />
