--- a/html/workshop_setup/preworkshop_checklist.html
+++ b/html/workshop_setup/preworkshop_checklist.html
@@ -388,7 +388,7 @@ font-size: 14pt;
 <p><br /></p>
 <ol style="list-style-type: decimal">
 <li><p>(optional) Take the
-<a href="https://forms.gle/bWbiEbfBsnVpbBBG7" target="_blank">Pre-workshop
+<a href="https://forms.gle/C1M8yN9gNJwbxpV88" target="_blank">Pre-workshop
 survey</a><br /> To help us better understand your collective background,
 we invite you to take an optional, anonymous pre-workshop
 survey.</p></li>
