--- a/html/Module00_Introduction.html
+++ b/html/Module00_Introduction.html
@@ -473,26 +473,12 @@ src="images/Module00_headshots/headshot_rcavalca.jpg" /></th>
 src="images/Module00_headshots/headshot_trsaari.jpg" /></td>
 <td align="center"><img
 src="images/Module00_headshots/headshot_damki.jpg" /></td>
-<td align="center"><img
-src="images/Module00_headshots/headshot_mkdohert.jpg" /></td>
+<td align="center"></td>
 </tr>
 <tr class="odd">
 <td align="center"><strong>Travis</strong></td>
 <td align="center"><strong>Dana</strong></td>
-<td align="center"><strong>Matt</strong></td>
-</tr>
-<tr class="even">
-<td align="center"><img
-src="images/Module00_headshots/headshot_jrhemama.jpg" /></td>
-<td align="center"><img
-src="images/Module00_headshots/headshot_grkenney.jpg" /></td>
-<td align="center"><img
-src="images/Module00_headshots/headshot_mccwen.jpg" /></td>
-</tr>
-<tr class="odd">
-<td align="center"><strong>Rhema</strong></td>
-<td align="center"><strong>Grace</strong></td>
-<td align="center"><strong>Crystal</strong></td>
+<td align="center"></td>
 </tr>
 </tbody>
 </table>
@@ -608,7 +594,7 @@ Chat functionality.</li>
 </div>
 <ul>
 <li>Slack messages will be posted to the
-<strong>2023-07-computational-foundations</strong> channel. Click on the
+<strong>2023-11-computational-foundations</strong> channel. Click on the
 channel in the left pane (1) to select this channel.</li>
 <li>You can type in the <strong>message field</strong> (2); click
 <strong>send</strong> (3) to post your message to everyone.</li>
