--- a/html/index.html
+++ b/html/index.html
@@ -330,6 +330,10 @@ body, td {
 }
 </style>
 <hr />
+<div id="pre-workshop-checklist" class="section level4">
+<h4><a href="workshop_setup/preworkshop_checklist.html"
+target="_blank">Pre-workshop checklist</a></h4>
+</div>
 <div id="setup-instructions" class="section level4">
 <h4><a href="workshop_setup/setup_instructions.html"
 target="_blank">Setup instructions</a></h4>
