--- a/html/Module99_Wrap_up.html
+++ b/html/Module99_Wrap_up.html
@@ -578,11 +578,24 @@ src="images/Module00_headshots/headshot_rcavalca.jpg" /></th>
 src="images/Module00_headshots/headshot_trsaari.jpg" /></td>
 <td align="center"><img
 src="images/Module00_headshots/headshot_damki.jpg" /></td>
-<td align="center"></td>
+<td align="center"><img
+src="images/Module00_headshots/headshot_daisyfu.jpg" /></td>
 </tr>
 <tr class="odd">
 <td align="center"><strong>Travis</strong></td>
 <td align="center"><strong>Dana</strong></td>
+<td align="center"><strong>Daisy</strong></td>
+</tr>
+<tr class="even">
+<td align="center"><img
+src="images/Module00_headshots/headshot_hongss.jpg" /></td>
+<td align="center"><img
+src="images/Module00_headshots/headshot_mkdohert.jpg" /></td>
+<td align="center"></td>
+</tr>
+<tr class="odd">
+<td align="center"><strong>Shuangsong</strong></td>
+<td align="center"><strong>Matt</strong></td>
 <td align="center"></td>
 </tr>
 </tbody>
