--- a/html/Module00_Introduction.html
+++ b/html/Module00_Introduction.html
@@ -448,9 +448,10 @@ workshop experience.</p></li>
 <h2>About the workshop team</h2>
 <table>
 <colgroup>
-<col width="33%" />
-<col width="33%" />
-<col width="33%" />
+<col width="25%" />
+<col width="25%" />
+<col width="25%" />
+<col width="25%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -460,6 +461,8 @@ src="images/Module00_headshots/headshot_cgates.jpg" /></th>
 src="images/Module00_headshots/headshot_mbradenb.jpg" /></th>
 <th align="center"><img
 src="images/Module00_headshots/headshot_rcavalca.jpg" /></th>
+<th align="center"><img
+src="images/Module00_headshots/headshot_trsaari.jpg" /></th>
 </tr>
 </thead>
 <tbody>
@@ -467,30 +470,36 @@ src="images/Module00_headshots/headshot_rcavalca.jpg" /></th>
 <td align="center"><strong>Chris</strong></td>
 <td align="center"><strong>Marci</strong></td>
 <td align="center"><strong>Raymond</strong></td>
+<td align="center"><strong>Travis</strong></td>
 </tr>
 <tr class="even">
 <td align="center"><img
-src="images/Module00_headshots/headshot_trsaari.jpg" /></td>
-<td align="center"><img
-src="images/Module00_headshots/headshot_damki.jpg" /></td>
-<td align="center"><img
 src="images/Module00_headshots/headshot_daisyfu.jpg" /></td>
+<td align="center"><img
+src="images/Module00_headshots/headshot_nlesniak.jpg" /></td>
+<td align="center"><img
+src="images/Module00_headshots/headshot_znuzhat.jpg" /></td>
+<td align="center"></td>
 </tr>
 <tr class="odd">
-<td align="center"><strong>Travis</strong></td>
-<td align="center"><strong>Dana</strong></td>
 <td align="center"><strong>Daisy</strong></td>
+<td align="center"><strong>Nick</strong></td>
+<td align="center"><strong>Nuzhat</strong></td>
+<td align="center"></td>
 </tr>
 <tr class="even">
 <td align="center"><img
 src="images/Module00_headshots/headshot_hongss.jpg" /></td>
 <td align="center"><img
 src="images/Module00_headshots/headshot_mkdohert.jpg" /></td>
+<td align="center"><img
+src="images/Module00_headshots/headshot_damki.jpg" /></td>
 <td align="center"></td>
 </tr>
 <tr class="odd">
 <td align="center"><strong>Shuangsong</strong></td>
 <td align="center"><strong>Matt</strong></td>
+<td align="center"><strong>Dana</strong></td>
 <td align="center"></td>
 </tr>
 </tbody>
