--- a/html/Module99_Wrap_up.html
+++ b/html/Module99_Wrap_up.html
@@ -553,9 +553,10 @@ started with Great Lakes</a>. (available to UM folks)</li>
 <p><img src="images/Module00_sponsor_logos.png" /></p>
 <table>
 <colgroup>
-<col width="33%" />
-<col width="33%" />
-<col width="33%" />
+<col width="25%" />
+<col width="25%" />
+<col width="25%" />
+<col width="25%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -565,6 +566,8 @@ src="images/Module00_headshots/headshot_cgates.jpg" /></th>
 src="images/Module00_headshots/headshot_mbradenb.jpg" /></th>
 <th align="center"><img
 src="images/Module00_headshots/headshot_rcavalca.jpg" /></th>
+<th align="center"><img
+src="images/Module00_headshots/headshot_trsaari.jpg" /></th>
 </tr>
 </thead>
 <tbody>
@@ -572,30 +575,36 @@ src="images/Module00_headshots/headshot_rcavalca.jpg" /></th>
 <td align="center"><strong>Chris</strong></td>
 <td align="center"><strong>Marci</strong></td>
 <td align="center"><strong>Raymond</strong></td>
+<td align="center"><strong>Travis</strong></td>
 </tr>
 <tr class="even">
 <td align="center"><img
-src="images/Module00_headshots/headshot_trsaari.jpg" /></td>
-<td align="center"><img
-src="images/Module00_headshots/headshot_damki.jpg" /></td>
-<td align="center"><img
 src="images/Module00_headshots/headshot_daisyfu.jpg" /></td>
+<td align="center"><img
+src="images/Module00_headshots/headshot_nlesniak.jpg" /></td>
+<td align="center"><img
+src="images/Module00_headshots/headshot_znuzhat.jpg" /></td>
+<td align="center"></td>
 </tr>
 <tr class="odd">
-<td align="center"><strong>Travis</strong></td>
-<td align="center"><strong>Dana</strong></td>
 <td align="center"><strong>Daisy</strong></td>
+<td align="center"><strong>Nick</strong></td>
+<td align="center"><strong>Nuzhat</strong></td>
+<td align="center"></td>
 </tr>
 <tr class="even">
 <td align="center"><img
 src="images/Module00_headshots/headshot_hongss.jpg" /></td>
 <td align="center"><img
 src="images/Module00_headshots/headshot_mkdohert.jpg" /></td>
+<td align="center"><img
+src="images/Module00_headshots/headshot_damki.jpg" /></td>
 <td align="center"></td>
 </tr>
 <tr class="odd">
 <td align="center"><strong>Shuangsong</strong></td>
 <td align="center"><strong>Matt</strong></td>
+<td align="center"><strong>Dana</strong></td>
 <td align="center"></td>
 </tr>
 </tbody>
