--- a/html/r-02-exploration-dplyr.html
+++ b/html/r-02-exploration-dplyr.html
@@ -397,17 +397,7 @@ pre {
 to load the <code>gapminder_1997</code> data. Let’s do that again:</p>
 <pre class="r"><code>library(tidyverse)
 gapminder_1997 = read_csv(&#39;data/gapminder_1997.csv&#39;)</code></pre>
-<pre><code>── Attaching core tidyverse packages ─────────────────────────────────────────────────── tidyverse 2.0.0 ──
-✔ dplyr     1.1.2     ✔ readr     2.1.4
-✔ forcats   1.0.0     ✔ stringr   1.5.0
-✔ ggplot2   3.4.3     ✔ tibble    3.2.1
-✔ lubridate 1.9.2     ✔ tidyr     1.3.0
-✔ purrr     1.0.2     
-── Conflicts ───────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
-✖ dplyr::filter() masks stats::filter()
-✖ dplyr::lag()    masks stats::lag()
-ℹ Use the conflicted package (&lt;http://conflicted.r-lib.org/&gt;) to force all conflicts to become errors
-Rows: 142 Columns: 6
+<pre><code>Rows: 142 Columns: 6
 ── Column specification ───────────────────────────────────────────────────────────────────────────────────
 Delimiter: &quot;,&quot;
 chr (2): country, continent
@@ -717,7 +707,7 @@ parameters.</p>
 <p>It looks like <code>x</code>, the data to be written and
 <code>file</code>, the path to the output file are required. There are
 other options, but we won’t use them here.</p>
-<pre class="r"><code>write_csv(gapminder_column_subset, file = &#39;gapminder_subset.csv&#39;)</code></pre>
+<pre class="r"><code>write_csv(gapminder_column_subset, file = &#39;gapminder_column_subset.csv&#39;)</code></pre>
 <p><strong>Checkpoint</strong></p>
 </div>
 <div id="narrow-down-rows-with-filter" class="section level2">
