--- a/html/workshop_setup/preregistration_info.html
+++ b/html/workshop_setup/preregistration_info.html
@@ -259,12 +259,12 @@ https://favicon.io/emoji-favicons/computer/
 -->
 <meta property="og:url" content="https://umich-brcf-bioinf.github.io/2024-07-22-umich-computational-foundations/html/workshop_setup/preregistration_info.html" />
 <meta property="og:site_name" content="University of Michigan Bioinformatics Core" />
-<meta property="og:title" content="UM BioinfCore Fall Workshop Series" />
+<meta property="og:title" content="UM BioinfCore Summer Workshop Series" />
 <meta property="og:description" content="Two companion workshops in July and August." />
 <meta name="twitter:label1" value="Computational Foundations (Intro to Bash/R)" />
-<meta name="twitter:data1" value="7/22-24 1-5pm ET" />
+<meta name="twitter:data1" value="July 22-24 1-5pm ET" />
 <meta name="twitter:label2" value="RNA-Seq Demystified" />
-<meta name="twitter:data2" value="8/5-7 1-5pm ET" />
+<meta name="twitter:data2" value="August 5-7 1-5pm ET" />
 
 <style type="text/css">
 code{white-space: pre-wrap;}
@@ -400,13 +400,13 @@ font-size: 14pt;
 }
 </style>
 <p>The Bioinf Core Workshop Team is pleased to host two workshops:</p>
-<div id="pm-et-computational-foundations" class="section level3">
-<h3><strong><a href="https://www.eventbrite.com/e/computational-foundations-a-3-day-virtual-workshop-tickets-916573454877" target="_blank">7/22-24,
-1-5pm ET: Computational Foundations</a></strong></h3>
+<div id="july-22-24-1-5pm-et-computational-foundations" class="section level3">
+<h3><strong><a href="https://www.eventbrite.com/e/computational-foundations-a-3-day-virtual-workshop-tickets-916573454877" target="_blank">July
+22-24, 1-5pm ET: Computational Foundations</a></strong></h3>
 </div>
-<div id="pm-et-rna-seq-demystified" class="section level3">
-<h3><strong><a href="https://www.eventbrite.com/e/rna-seq-demystified-a-3-day-virtual-workshop-registration-916575811927" target="_blank">8/5-7,
-1-5pm ET: RNA-Seq Demystified</a></strong></h3>
+<div id="august-5-7-1-5pm-et-rna-seq-demystified" class="section level3">
+<h3><strong><a href="https://www.eventbrite.com/e/rna-seq-demystified-a-3-day-virtual-workshop-registration-916575811927" target="_blank">August
+5-7, 1-5pm ET: RNA-Seq Demystified</a></strong></h3>
 <ul>
 <li>This two-workshop series is targeted toward researchers who would
 like to better understand the analysis of differential gene expression
