--- a/html/workshop_setup/preregistration_info.html
+++ b/html/workshop_setup/preregistration_info.html
@@ -261,7 +261,7 @@ https://favicon.io/emoji-favicons/computer/
 <meta property="og:site_name" content="University of Michigan Bioinformatics Core" />
 <meta property="og:title" content="UM BioinfCore Summer Workshop Series" />
 <meta property="og:description" content="Two companion workshops in July and August." />
-<meta name="twitter:label1" value="Computational Foundations (Intro to Bash/R)" />
+<meta name="twitter:label1" value="Computational Foundations" />
 <meta name="twitter:data1" value="July 22-24 1-5pm ET" />
 <meta name="twitter:label2" value="RNA-Seq Demystified" />
 <meta name="twitter:data2" value="August 5-7 1-5pm ET" />
